test/files/pos/t0304.scala
object O {
  def f1 = -1;
  def f2 = 0-1;
  def f3 = f1 + f2;
}
