test/files/neg/warn-shadowing-import-213/B.scala
package b

object O { def b = 0 }